--- a/color.html
+++ b/color.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no,maximum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <title>Exp</title>
+<style>
+html, body {
+	overflow:hidden;
+}
+</style>
 </head>
 <body style="height:100vh;margin:0">
 <table height="100%" width="100%">
