--- a/black.html
+++ b/black.html
@@ -9,6 +9,25 @@
 html, body {
 	overflow:hidden;
 }
+td {
+	height:2em;
+    padding:15px 50px;
+    margin:20px 40px;
+    cursor:pointer;
+    color:#FFF;
+    font-size:1em;
+    border:1px solid #eee;
+    border-radius:4px;
+    line-height:2em;
+    border:1px solid #aaa;
+    text-decoration:none;
+
+    -webkit-transition: all 0.3s linear;
+     -khtml-transition: all 0.3s linear;
+       -moz-transition: all 0.3s linear;
+         -o-transition: all 0.3s linear;
+            transition: all 0.3s linear;
+}
 </style>
 </head>
 <body style="height:100vh;margin:0">
